--- a/injector/Cargo.toml
+++ b/injector/Cargo.toml
@@ -30,6 +30,7 @@ darwin-libproc-sys = "0.2"
 spawn-task-port = { git = "https://github.com/melvyn2/spawn-task-port.git" }
 mach2 = "0.4"
 ctor = "0.2"
+mach_util = { path = "../mach_util" }
 
 [target.'cfg(target_os = "macos")'.dev-dependencies]
 # This crate is so comically bloated that it brings our dependency tree (cargo-tree) from 44 lines to 904!!!!!!!!! WTF!!
