--- a/injector/Cargo.toml
+++ b/injector/Cargo.toml
@@ -13,13 +13,13 @@ required-features = ["env_logger"]
 default = ["wine", "env_logger"]
 wine = []  # No-op on non-unix
 macos-ent-bypass = []  # No-op on non-darwin
-test_broken = []  # Used to test broken methods
+test_broken = [ "spawn-task-port" ]  # Used to test broken methods
 
 [dependencies]
 env_logger = { version = "0.10", optional = true }
 libc = "0.2"
 log = "0.4"
-sysinfo = { version = "0.28", default-features = false }
+sysinfo = { version = "0.29", default-features = false }
 
 [dev-dependencies]
 testlib = { path = "./testlib", artifact = ["cdylib"] }
@@ -27,7 +27,7 @@ testbin = { path = "./testbin", artifact = ["bin"], lib = true }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 darwin-libproc-sys = "0.2"
-spawn-task-port = { git = "https://github.com/melvyn2/spawn-task-port.git" }
+spawn-task-port = { git = "https://github.com/melvyn2/spawn-task-port.git", optional = true }
 mach2 = "0.4"
 ctor = "0.2"
 mach_util = { path = "../mach_util" }
