--- a/macos_portfetch/Cargo.toml
+++ b/macos_portfetch/Cargo.toml
@@ -10,7 +10,8 @@ exploit-CVE-2022-42855 = []
 [dependencies]
 log = "0.4"
 libc = "0.2"
-nonblock = "0.2"
+timeout-readwrite = "0.3"
+bincode = "2.0.0-rc.3"
 mach2 = "0.4"
 security-framework-sys = "2.8"
 sysinfo = "0.29"
