--- a/mach_util/Cargo.toml
+++ b/mach_util/Cargo.toml
@@ -3,8 +3,10 @@ name = "mach_util"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+default = ["bincode"]
 
 [dependencies]
 libc = "0.2"
 mach2 = "0.4"
+bincode = { version = "2.0.0-rc.3", optional = true}
