--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,5 @@
 [unstable]
 bindeps = true
 
-[target.'cfg(target_os = "macos")']
-runner = ".cargo/macos_cs_runner.sh"
+#[target.'cfg(target_os = "macos")']
+#runner = ".cargo/macos_cs_runner.sh"
