--- a/injector/Cargo.toml
+++ b/injector/Cargo.toml
@@ -26,11 +26,11 @@ testbin = { path = "./testbin", artifact = ["bin"], lib = true }
 [target.'cfg(target_os = "macos")'.dependencies]
 spawn-task-port = { git = "https://github.com/melvyn2/spawn-task-port.git", optional = true }
 mach2 = "0.4"
-ctor = "0.2"
 mach_util = { path = "../mach_util" }
 
 [target.'cfg(target_os = "macos")'.dev-dependencies]
 # This crate is so comically bloated that it brings our dependency tree (cargo-tree) from 44 lines to 904!!!!!!!!! WTF!!
 # Thankfully we don't need it except for tests
+# TODO check if custom source still required
 apple-codesign = { git = "https://github.com/melvyn2/apple-platform-rs.git", default-features = false }
 macos_portfetch = { path = "../macos_portfetch" }
